--- a/submissions/skhalar_java/README.me
+++ b/submissions/skhalar_java/README.me
@@ -3,4 +3,4 @@
 ## How to Run
 
 1. Install JDK 21
-2. Run `java SpotifyAnalysis.java`
+2. Run `java SpotifyAnalysis.java /path/to/spotify/csv` from the src folder
