Add a Python solution without using 3rd party modules

--- a/submissions/Sylphritz/python/spotify-analytics.ipynb
+++ b/submissions/Sylphritz/python/spotify-analytics.ipynb
@@ -296,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Most Popular Artist's Song Count"
+    "### 3. Most Popular Artist's Song Count"
    ]
   },
   {
@@ -317,6 +317,173 @@
     "most_songs_index = song_count_by_artist.idxmax()\n",
     "\n",
     "print(f'The artist with the most songs is {most_songs_index} with {song_count_by_artist[most_songs_index]} songs')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solutions Without Pandas\n",
+    "\n",
+    "Below are the results without relying on Pandas for CSV dataset manipulation.\n",
+    "\n",
+    "### 1. Number of Songs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Seven (feat. Latto) (Explicit Ver.)',\n",
+       " 'Latto, Jung Kook',\n",
+       " '2',\n",
+       " '2023',\n",
+       " '7',\n",
+       " '14',\n",
+       " '553',\n",
+       " '147',\n",
+       " '141381703',\n",
+       " '43',\n",
+       " '263',\n",
+       " '45',\n",
+       " '10',\n",
+       " '826',\n",
+       " '125',\n",
+       " 'B',\n",
+       " 'Major',\n",
+       " '80',\n",
+       " '89',\n",
+       " '83',\n",
+       " '31',\n",
+       " '0',\n",
+       " '8',\n",
+       " '4']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load and clean the data\n",
+    "import re\n",
+    "\n",
+    "data = open('spotify-2023.csv', 'r')\n",
+    "rows = data.readlines()\n",
+    "\n",
+    "# Strip new line characters (\\n) and split data into columns\n",
+    "strip_pattern = r'(?:,|^)(?=[^\"]|(\")?)\"?((?(1)[^\"]*|[^,\"]*))\"?'\n",
+    "\n",
+    "def split_columns(row):\n",
+    "    new_row = []\n",
+    "    columns = [column[1] for column in re.findall(strip_pattern, row.strip('\\n'))]\n",
+    "    \n",
+    "    for col in columns:\n",
+    "        if not col is None:\n",
+    "            new_row.append(col.strip('\"'))\n",
+    "        \n",
+    "    return new_row\n",
+    "\n",
+    "rows = list(map(split_columns, rows))\n",
+    "\n",
+    "# Split the column headers from the data\n",
+    "headers = rows[0]\n",
+    "rows = rows[1:]\n",
+    "\n",
+    "# Declaring important column indexes\n",
+    "ARTIST_NAME_INDEX = 1\n",
+    "KEY_INDEX = 15\n",
+    "\n",
+    "rows[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are total of 953 songs in the dataset.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'There are total of {len(rows)} songs in the dataset.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Number of Songs in E Key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 62 songs in E key.\n"
+     ]
+    }
+   ],
+   "source": [
+    "songs_in_e_key_count = 0\n",
+    "\n",
+    "for row in rows:\n",
+    "    if row[KEY_INDEX].lower() == 'e':\n",
+    "        songs_in_e_key_count += 1\n",
+    "\n",
+    "print(f'There are {songs_in_e_key_count} songs in E key.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Most Popular Artist's Song Count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The artist with the most songs is Taylor Swift with 34 songs\n"
+     ]
+    }
+   ],
+   "source": [
+    "song_counts = {}\n",
+    "\n",
+    "for row in rows:\n",
+    "    artist_name = row[ARTIST_NAME_INDEX]\n",
+    "    \n",
+    "    if artist_name in song_counts.keys():\n",
+    "        song_counts[artist_name] += 1\n",
+    "    else:\n",
+    "        song_counts[artist_name] = 1\n",
+    "        \n",
+    "max_song_count = max(list(song_counts.values()))\n",
+    "artist_with_most_songs = list(song_counts.keys())[list(song_counts.values()).index(max_song_count)]\n",
+    "\n",
+    "print(f'The artist with the most songs is {artist_with_most_songs} with {max_song_count} songs')"
    ]
   }
  ],
